We are now fetching pokemon

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Pokedex.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
 /Pokedex.xcodeproj/project.xcworkspace/contents.xcworkspacedata
 /.DS_Store
+/Pokedex.xcodeproj/xcuserdata/nathanfalcone.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
